Update CSS to prevent dropdowns from spilling over modal edges
In applications I am working on, I have found the need to place dropdowns into modals quite common.  However, large dropdowns would always spill over and force the modal to have overflow.  This fixes this by forcing dropdowns to be no larger than 60vh (the modal itself will always be no longer than 70vh).

It may be more appropriate to add this into the JS itself or another CSS file, I just thought I'd share my fix.

--- a/sass/components/_dropdown.scss
+++ b/sass/components/_dropdown.scss
@@ -83,3 +83,8 @@ body.keyboard-focused {
 .dropdown-trigger {
   cursor: pointer;
 }
+
+// Do not spill over the edge of a modal
+.modal-content .dropdown-content.select-dropdown {
+	max-height: 60vh !important; // important needed to override JS' calculations
+}
